feat: add caption and color

--- a/start.html
+++ b/start.html
@@ -10,14 +10,18 @@
 
 <body>
 <table>
+    <caption>Entrate e uscite</caption>
 	<thead>
-		<tr>
-			<th>MESI</th>
+        <tr>
+			<th>MESE</th>
 			<th>ENTRATE</th>
 			<th>USCITE</th>
 		</tr>
 	</thead>
 <tbody>
+    <colgroup>
+            <col style="background-color: red;">
+    </colgroup>
 	<tr>
 		<td>GENNAIO</td>
 		<td>10</td>
